<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?myTransparentColor"
    android:id="@+id/root"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loading_view"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            style="?android:attr/progressBarStyleLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/view9"
            android:layout_marginTop="5dp"
            android:text="Searching..." />

    </LinearLayout>

    <tr.xip.errorview.ErrorView
        android:id="@+id/error_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:ev_title="@string/error_title"
        app:ev_titleColor="@color/title_error_color"
        app:ev_subtitle="@string/error_sub_title"
        app:ev_subtitleColor="@color/sub_title_error_color"
        app:ev_errorImage="@drawable/error_view_cloud"
        app:ev_showTitle="true"
        app:ev_showSubtitle="false"
        app:ev_showRetryButton="true"
        app:ev_retryButtonText="@string/error_refresh_text"
        app:ev_retryButtonTextColor="@color/retry_button_color"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:visibility="visible"
        app:theme="?myActionBarToolbarStyle"
        app:popupTheme="?mytoolbarPopUpStyle"
        android:background="?myPrimaryColor"
        android:touchscreenBlocksFocus="false"
        android:elevation="4dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionSearch"
            app:met_hideUnderline="true"
            android:hint="Search"
            app:met_textColorHint="#7effffff"
            app:met_textColor ="#ffffff"
            android:textSize="16dp"></com.rengwuxian.materialedittext.MaterialEditText>

    </android.support.v7.widget.Toolbar>

    <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerview"
        app:recyclerviewEmptyView="@layout/empty_view_search"
        android:background="?backgroundColor"
        android:visibility="gone" />

    <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/more_recyclerview"
        app:recyclerviewEmptyView="@layout/empty_view_search"
        android:background="?backgroundColor"
        android:visibility="gone" />

</RelativeLayout>
